# SocialPeople

./: .gitignore  main.py  manage.py  pyproject.toml
SocialPeople/: asgi.py  settings.py  urls.py  wsgi.py
account/: apps.py  forms.py  models.py  urls.py  views.py
static/: base.css
static/css/: base.css
templates/: base.html  header.html  navigation.html
templates/account/: dashboard.html  edit_profile.html  login.html
templates/account/template/: register.html
templates/registration/: login.html  login_logout.html  password_ change_done.html  password_reset_form.html
