[project]
name = "socialpeople"
version = "0.1.0"
description = "A Django-based social network project"
dependencies = [
    "django>=5.1.7",
    "django-debug-toolbar>=5.1.0",
    "django-widget-tweaks",
]
license = "MIT"  # Простая строка вместо таблицы

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["SocialPeople", "account"]  # Явно указываем пакеты
